Demo user login fix
